--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Rock Paper Scissor</h1>
     <div class="choices">
         <div class="choice" id="rock">
-            <img src="/Images/rock.png">
+            <img src="Images/rock.png">
         </div>
         <div class="choice" id="paper">
-            <img src="/Images/paper.png">
+            <img src="Images/paper.png">
         </div>
         <div class="choice" id="scissors">
-            <img src="/Images/scissors.png">
+            <img src="Images/scissors.png">
         </div>
     </div>
     <div class="score-board">
